--- a/playbooks/kubectl_debug.yml
+++ b/playbooks/kubectl_debug.yml
@@ -69,7 +69,7 @@
       src: "./kube.tar.gz"
       dest: "rsync://{{inventory_hostname}}/kube.tar.gz"
       mode: push
-      set_remote_user: "{{non_rootuser}}"
+      set_remote_user: yes
     # delegate_to: "{{groups['masters'][0]}}"
     register: syncfile
     when: check_admin_config_path.stat.exists == false
