WIP: more collection scripts

--- a/playbooks/kubectl_debug.yml
+++ b/playbooks/kubectl_debug.yml
@@ -152,12 +152,114 @@
 
       - name: ps_rss_info
         cmd: ps aux --sort -rss
+
+      - name: pstree_p_info
+        cmd: pstree -p
+
+      - name: lspci_info
+        cmd: lspci
+
+      - name: lspci_info
+        cmd: set -x; blkid; lsblk; df -T; df -i
+
+      - name: netstat_tunpl_info
+        cmd: netstat -tunpl
+
+      - name: top_b_info
+        cmd: top -b -n 1
+
+
+      - name: iptables_info
+        cmd: ip a; ip r; iptables-save;iptables -nvL;
+
+      - name: cpuinfo_info
+        cmd: cat /proc/cpuinfo
+
+      - name: ip_netns_info
+        cmd: |
+          (for NS in $(ip netns list); do
+              echo "==== $NS ====";
+              ip netns exec $NS ip a;
+              ip netns exec $NS ip r;
+              ip netns exec $NS ip iptables-save;
+              PIDS="$(ip netns pids $NS)";
+              [[ ! -z "$PIDS" ]] && ps --no-headers -f --pids "$PIDS";
+              echo "";
+              done)
+
+
+      # SOURCE: https://github.com/tysonnorris/openwhisk-new-containerpool/blob/bdf95b0f941632dc39a0ac04be08e1864f4267ae/ansible/logs.yml
+      - name: docker_ps_info
+        cmd:  "{{ docker_bin_dir }}/docker ps -a --format=\"{% raw %}{{.Names}}{% endraw %}\""
+
+      - name: docker_get_logs_info
+        cmd: for in in `{{ docker_bin_dir }}/docker ps -a --format="{% raw %}{{.Names}}{% endraw %}"`;
+          do {{ docker_bin_dir }}/docker logs ${i}; done
+
       - name: systemctl_failed_info
         cmd: systemctl --state=failed --no-pager
+      - name: systemctl_all_info
+        cmd: systemctl --all --no-pager
       - name: k8s_info
         cmd: "{{ bin_dir }}/kubectl get all --all-namespaces -o wide"
       - name: errors_info
         cmd: journalctl -p err --no-pager
+
+      # SOURCE: https://github.com/redhat-openstack/infrared/blob/0c06a624c2584368ea65543ee9960cd130177753/plugins/collect-logs/tasks/collect_host_logs.yml
+      - name: logs_from_broken_systemd_units_info
+        cmd: >
+          systemctl -t service --failed --no-legend | awk '{print $1}'
+          | xargs -r -n1 journalctl --no-pager -u
+
+      - name: docker_verbose_logs_and_more_info
+        cmd: >
+          if command -v docker && systemctl is-active docker; then
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              echo "+ docker ps --all --size"
+              docker ps --all --size
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              echo "+ docker images --all"
+              docker images --all
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              echo "+ docker volume ls"
+              docker volume ls
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              echo "+ docker stats --all --no-stream"
+              docker stats --all --no-stream
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              echo "+ docker info"
+              docker info
+              echo "------------------------------------------------------------------------------------------------------"
+              echo ""
+              echo ""
+              for cont in $(docker ps -a | awk {'print $NF'} | grep -v NAMES); do
+                  echo "-----------------------------------------------------CONTAINER - ${cont}--------------------------------------------"
+                  echo ""
+                  echo ""
+                  echo "+ docker top $cont auxw"
+                  docker top "$cont" auxw
+                  echo "+ docker exec $cont top -bwn1"
+                  docker exec "$cont" top -bwn1
+                  echo "+ docker inspect $cont"
+                  docker inspect "$cont"
+                  docker logs "$cont"
+                  echo "+ docker exec -it --user root $cont /usr/bin/dpkg -l"
+                  docker exec -it --user root ${cont} /usr/bin/dpkg -l
+                  echo ""
+                  echo ""
+              done;
+          fi
+
       - name: file_nr_info
         cmd: cat /proc/sys/fs/file-nr
       - name: df_h_info
@@ -166,6 +268,9 @@
         cmd: free -m
       - name: sysctl_a_info
         cmd: sysctl -a
+      # SOURCE: https://lzone.de/cheat-sheet/ulimit
+      - name: lsof_info
+        cmd: lsof -n 2>/dev/null | awk '{print $1,$2}' | sort | uniq -c | sort -nr | head -25 | while read nr name pid ; do printf "%10d / %-10d %-15s (PID %5s)\n" $nr $(cat /proc/$pid/limits | grep 'open files' | awk '{print $5}') $name $pid; done
       # - name: etcd_info
       #   cmd: "{{ bin_dir }}/etcdctl --peers={{ etcd_access_addresses | default('http://127.0.0.1:2379') }} cluster-health"
       # - name: calico_info
@@ -183,6 +288,10 @@
       # - name: weave_logs
       #   cmd: "{{ docker_bin_dir }}/docker logs weave"
       #   when: '{{ kube_network_plugin == "weave" }}'
+      # - name: segfault_info
+      #   cmd: ! grep -v ansible-command /var/log/messages | grep segfault
+      # - name: oom_killer_info
+      #   cmd: ! grep -v ansible-command /var/log/messages | grep oom-killer
       - name: lsmod_info
         cmd: lsmod
       - name: lshw_info
@@ -315,3 +424,19 @@
       ignore_errors: yes
 
     - debug: msg="you can now find the files in /tmp/{{ archive_dirname }}/commands /tmp/{{ archive_dirname }}/logs"
+
+# SOURCE: https://github.com/redhat-openstack/infrared/blob/0c06a624c2584368ea65543ee9960cd130177753/plugins/collect-logs/tasks/collect_host_logs.yml
+# - name: clockdiff to each peer
+#   shell: |
+#       time_log=/var/log/extra/clockdiff
+#       echo -n "date:" >"$time_log"
+#       date &>>"$time_log"
+#       {% for host in groups['all'] %}
+#          # something that applies to all app servers.
+#       {% if 'ansible_default_ipv4' in hostvars[host] %}
+#       echo -n {{ host }} [{{ hostvars[host]['ansible_default_ipv4']['address'] }}] ": " &>>"$time_log"
+#       clockdiff {{ hostvars[host]['ansible_default_ipv4']['address'] }} &>>"$time_log"
+#       {% endif %}
+#       {% endfor %}
+#   ignore_errors: true
+#   tags: skip_ansible_lint
