--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -84,11 +84,14 @@ boss__echoserver__service__spec_selector: |
 
 boss__calico__manifest_path: "{{manifest_dir_path}}/calico"
 boss__calico__namespace_name: kube-system
-boss__calico__prometheus_metrics_enabled: true
+boss__calico__prometheus_metrics_enabled: false
+boss__calico__veth_mtu: 1440
 
 boss__calico__node_version: v3.3.2
 boss__calico__node_image_repo: "quay.io/calico/node"
 boss__calico__node_image_tag: "{{ boss__calico__node_version }}"
+
+boss__calico__node_env_CALICO_IPV4POOL_IPIP: "Always"
 
 boss__calico__cni_version: v3.3.2
 boss__calico__cni_image_repo: "quay.io/calico/cni"
@@ -98,18 +101,21 @@ boss__calico__enable_prometheus_exporter_servicemonitor: "enabled"
 
 boss__calico__prometheus_exporter_namespace_name: monitoring
 
+boss__calico__enable_prometheus_felix: "false" # false,enabled
 boss__calico__felix_PrometheusMetricsPort: 9091
 boss__calico__typha_PrometheusMetricsPort: 9093
+
 
 boss__calico__node_daemonset_annotations: |
   scheduler.alpha.kubernetes.io/critical-pod: ''
   prometheus.io/scrape: "true"
   prometheus.io/port: "{{boss__calico__felix_PrometheusMetricsPort}}"
 
-boss__calico__enable_typha: "enabled"
-boss__calico__typha_service_name: calico-typha  # or none
+boss__calico__enable_typha: "false" # false,enabled
+boss__calico__enable_prometheus_typha: "false" # false,enabled
+boss__calico__typha_service_name: "none"  # or none,calico-typha
 
-boss__calico__typha_deployment_spec_replicas: 3
+boss__calico__typha_deployment_spec_replicas: 0 # or 0,3
 
 boss__calico__typha_service_annotations: |
   prometheus.io/scrape: "true"
