--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -85,13 +85,14 @@ boss__echoserver__service__spec_selector: |
 boss__calico__manifest_path: "{{manifest_dir_path}}/calico"
 boss__calico__namespace_name: kube-system
 boss__calico__prometheus_metrics_enabled: false
-boss__calico__veth_mtu: 1440
+# NOTE: See https://docs.projectcalico.org/v3.5/usage/configuration/mtu for recomendations
+boss__calico__veth_mtu: 1480 # 1480,
+boss__calico__node_env_CALICO_IPV4POOL_IPIP: "Always"
 
 boss__calico__node_version: v3.3.2
 boss__calico__node_image_repo: "quay.io/calico/node"
 boss__calico__node_image_tag: "{{ boss__calico__node_version }}"
 
-boss__calico__node_env_CALICO_IPV4POOL_IPIP: "Always"
 
 boss__calico__cni_version: v3.3.2
 boss__calico__cni_image_repo: "quay.io/calico/cni"
