--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -83,11 +83,17 @@ boss__echoserver__service__spec_selector: |
 
 boss__calico__manifest_path: "{{manifest_dir_path}}/calico"
 boss__calico__namespace_name: kube-system
-boss__calico__prometheus_metrics_enabled: true
+boss__calico__prometheus_metrics_enabled: false
+# NOTE: See https://docs.projectcalico.org/v3.5/usage/configuration/mtu for recomendations
+boss__calico__veth_mtu: 1480 # 1480,
+boss__calico__node_env_CALICO_IPV4POOL_IPIP: "Always"
+boss__calico__debugger_deployment_spec_replicas: 1
+boss__calico__debugger_enabled: "enabled"
 
 boss__calico__node_version: v3.3.2
 boss__calico__node_image_repo: "quay.io/calico/node"
 boss__calico__node_image_tag: "{{ boss__calico__node_version }}"
+
 
 boss__calico__cni_version: v3.3.2
 boss__calico__cni_image_repo: "quay.io/calico/cni"
@@ -97,19 +103,21 @@ boss__calico__enable_prometheus_exporter_servicemonitor: "enabled"
 
 boss__calico__prometheus_exporter_namespace_name: monitoring
 
+boss__calico__enable_prometheus_felix: "false" # false,enabled
 boss__calico__felix_PrometheusMetricsPort: 9091
 boss__calico__typha_PrometheusMetricsPort: 9093
+
 
 boss__calico__node_daemonset_annotations: |
   scheduler.alpha.kubernetes.io/critical-pod: ''
   prometheus.io/scrape: "true"
   prometheus.io/port: "{{boss__calico__felix_PrometheusMetricsPort}}"
 
-boss__calico__enable_typha: "enabled"
-boss__calico__enable_prometheus_typha: "enabled"
-boss__calico__typha_service_name: calico-typha  # or none
+boss__calico__enable_typha: "false" # false,enabled
+boss__calico__enable_prometheus_typha: "false" # false,enabled
+boss__calico__typha_service_name: "none"  # or none,calico-typha
 
-boss__calico__typha_deployment_spec_replicas: 3
+boss__calico__typha_deployment_spec_replicas: 0 # or 0,3
 
 boss__calico__typha_service_annotations: |
   prometheus.io/scrape: "true"
@@ -123,6 +131,8 @@ boss__calico__typha_deployment_annotations: |
   cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
   prometheus.io/scrape: "true"
   prometheus.io/port: "{{boss__calico__typha_PrometheusMetricsPort}}"
+
+
 
 # {{ calico_node_image_repo }}:{{ calico_node_image_tag }}
 
@@ -1274,7 +1284,7 @@ boss__prometheus__operator__grafana_pv_labels: |
 
 boss__prometheus__operator__grafana_pv_spec_capacity_storage: 2Gi
 boss__prometheus__operator__grafana_pv_spec_nfs: |
-    server: 192.168.1.174
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/grafana"
 
 
@@ -1296,7 +1306,7 @@ boss__prometheus__operator__prometheus_adapter_tmpfs_pv_labels: |
 
 boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_capacity_storage: 2Gi
 boss__prometheus__operator__prometheus_adapter_tmpfs_pv_spec_nfs: |
-    server: 192.168.1.174
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/prometheus-adapter-tmpfs"
 
 # persistent volume claim - prometheus-adapter-volume-serving-cert
@@ -1317,7 +1327,7 @@ boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_labels: |
 
 boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_capacity_storage: 2Gi
 boss__prometheus__operator__prometheus_adapter_volume_serving_cert_pv_spec_nfs: |
-    server: 192.168.1.174
+    server: {{nfs_server_ip_override}}
     path: "/mnt/publicdata/prometheus-adapter-volume-serving-cert"
 
 
